--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "string.h": "c",
         "line.h": "c",
         "helper_fucntions.h": "c",
-        "support_functions.h": "c"
+        "support_functions.h": "c",
+        "first_pass.h": "c"
     }
 }
