update some files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,4 @@ add_executable(SPL2023b_Project_copy
         src/pre-processor/pre_processor.c
         src/pre-processor/support_functions.c
         src/create_file_func.c
-        )
+        "src/Second - Pass/SecondPass.c")
