added function to check if a string is a number and a function to calculte the number of bnerey words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "string.h": "c",
         "line.h": "c",
         "helper_fucntions.h": "c",
-        "support_functions.h": "c"
+        "support_functions.h": "c",
+        "instruction.h": "c",
+        "symbol_table.h": "c"
     },
     "cSpell.words": [
         "endmcro",
