functions used for the first-pass
added the data_arr,
symbol_table
and instruction functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "helper_fucntions.h": "c",
         "support_functions.h": "c",
         "instruction.h": "c",
-        "symbol_table.h": "c"
+        "symbol_table.h": "c",
+        "stdlib.h": "c"
     },
     "cSpell.words": [
         "endmcro",
