functions for the first pass.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
         "support_functions.h": "c",
         "instruction.h": "c",
         "symbol_table.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "first_pass.h": "c",
+        "instruction_helper.h": "c"
     },
     "cSpell.words": [
         "endmcro",
