changed some things for pre-processor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,10 @@
         "cstdlib": "c",
         "globals.h": "c",
         "errors.h": "c",
-        "first_pass_headers.h": "c"
+        "first_pass_headers.h": "c",
+        "stdio.h": "c",
+        "typeinfo": "c",
+        "encode.h": "c"
     },
     "cSpell.words": [
         "endmcro",
